# api/src/users/users.controller.ts
@@ -6,11 +6,13 @@ import {
   Req,
   Res,
   UseGuards,
+  InternalServerErrorException,
 } from '@nestjs/common';
 import { AuthGuard } from '@nestjs/passport';
 import { Response } from 'express';
 import { CurrentUser } from 'src/models/current.user';
 import { RegistrationReqModel } from 'src/models/registration.req.model';
+import { LoginRespModel } from './models/login.resp.model';
 import { UsersService } from './users.service';
 
 @Controller('users')
@@ -24,18 +26,22 @@ export class UsersController {
 
   @Post('login')
   @UseGuards(AuthGuard('local'))
-  async login(@Req() req, @Res({ passthrough: true }) res: Response) {
-    const token = await this.userService.getJwtToken(req.user as CurrentUser);
-    const refreshToken = await this.userService.getRefreshToken(
-      req.user.id,
-    );
-    const secretData = {
-      token,
-      refreshToken,
-    };
+  async login(@Req() req, @Res({ passthrough: true }) res: Response): Promise<LoginRespModel> {
+    try {
+      const token = await this.userService.getJwtToken(req.user as CurrentUser);
+      const refreshToken = await this.userService.getRefreshToken(
+        req.user.id,
+      );
+      const secretData = {
+        token,
+        refreshToken,
+      };
 
-    res.cookie('auth-cookie', secretData, { httpOnly: true });
-    return { msg: 'success' };
+      res.cookie('auth-cookie', secretData, { httpOnly: true });
+      return { statusCode: 201, message: 'success' };
+    } catch (e) {
+      throw new InternalServerErrorException();
+    }
   }
 
   @Post('logout')
@@ -48,8 +54,8 @@ export class UsersController {
     return { msg: 'success' };
   }
 
-  @UseGuards(AuthGuard('jwt'))
   @Get('profile')
+  @UseGuards(AuthGuard('jwt'))
   getProfile(@Req() req: { user }) {
     return req.user;
   }
